--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ p.specialization {
     bottom: 0;
 }
 
-header {
+div.header {
     margin-top: 30px;
     animation-name: paslash;
     animation-duration: 700ms;
